atualização do camiho Imgans css

--- a/style.css
+++ b/style.css
@@ -82,7 +82,7 @@ td {
     padding: 8px 10px;
 }
 footer {
-    background: url(../img/bg.jpg);
+    background: url(../Imagens/bg.jpg);
     padding: 20px auto;
 }
 footer p {
