--- a/style.css
+++ b/style.css
@@ -32,10 +32,17 @@ nav a:hover {
     color: #696767;
     text-decoration: underline;
 }
-main {
+.corpo-formulario{
     width: 940px;
     margin: 0 auto;
 }
+main {
+    /*width: 940px;
+    margin: 0 auto;*/
+}
+/*main > p {
+    background: blue; irá selecionar somente o primeiro paragrafo do pai 'seletor main'
+}*/
 form {
     margin: 40px;
 }
@@ -102,9 +109,20 @@ footer img {
 }
 /* css da pagina index.html */
 .banner {
-    width: 100%;
-    height: 450px ;
 
+    width: 100%;
+    
+}
+.principal {
+    padding: 2em 0;
+    background: #bbb3b3;
+}
+/* .principal p:not(#missao) {
+    background: #696767; //selecionamos todos os paragrafos que não são da classe missão e damos uma cor diferente
+} */
+.conteudo-principal{
+    width: 940px;
+    margin: 0 auto;
 }
 .titulo-principal {
     font-size: 2em;
@@ -112,24 +130,85 @@ footer img {
     margin: 0 0 1em;
     clear: left; /* esse comando serve para limpar a imagem coloca com float:left, sem isso o titulo fica grudado */
 }
+.titulo-principal:hover {
+    color: rgba(0, 0, 0, 0.8); /*irei trabalhar a opacidade da letra */
+    font-weight: bold;
+}
 .utensilios {
     width: 120px;
     float: left;
     padding: 0 20px 20px 0;
 }
+/* img + p {
+    background: red; 'aqui seleciona primeiro paragrafo da classe filho img'
+}
+img ~ p {
+    background: #00BFFF; 'seleciona todos os paragrafos da classe filho de main no caso img'
+} */
 .principal strong {
     font-weight: bold;
-}
-.principal em {
     font-style: italic;
 }
-.imgbeneficios {
+.beneficios {
+    padding: 3em 0;
+    background: #888;
+    box-shadow: inset 0px 0px 5px 0 #000; /*sombra interna*/
+   
+}
+.img-beneficios {
     width: 50%;
+    opacity: 1;
+    box-shadow: 3px 1px 3px 0 #000; 
+}
+.img-beneficios:hover {
+    opacity: 0.7;
 }
 .mapa {
-    margin: 30px;
+    padding: 3em 0;
+    background: linear-gradient(#888, #FEFEFE) ;
+}
+.mapa-conteudo {
+    width: 940px;
+    margin: 0 auto;
 }
 .mapa p {
     text-align: center;
     padding: 0 0 20px;
+}
+.espaco-beneficios {
+    width: 640px;
+    margin: 2em auto;
+}
+.lista-beneficios {   
+    display: inline-block;
+    list-style-type: none;
+    width: 39%;
+    vertical-align: top;
+}
+.itens::before{
+    content: "⚝";
+}
+.itens:first-child {
+    font-weight: bold;
+}
+.img-beneficios {
+    width: 60%;
+}
+.video {
+    width: 560px;
+    margin: 1em auto; /*1em para top e para botton e auto para left e right */
+}
+@media screen and (max-width: 480px){
+    .caixa, .conteudo-principal, .principal, .espaco-beneficios, .mapa-conteudo, .video  {
+        width: auto;
+    }
+    h1 {
+        text-align: center;
+    }
+    nav {
+        position: static;
+    }
+    .lista-beneficios, .img-beneficios{
+        width: 100%;
+    }
 }
